fixed style bug in project component that was not allowing to display all the img on mobile

--- a/src/compoents/pageComponents/Project/Project.module.css
+++ b/src/compoents/pageComponents/Project/Project.module.css
@@ -55,18 +55,6 @@
   align-items: center;
 }
 
-.descContainer::-webkit-scrollbar {
-  width: 0.1vw;
-}
-
-.descContainer::-webkit-scrollbar-thumb {
-  background-color: black;
-}
-
-.descContainer::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
 .descText {
   height: 70%;
   width: 90%;
@@ -144,20 +132,20 @@
   }
 
   .descContainer {
-    min-height: 40vh;
-    max-height: 50vh;
-    margin-top: 3rem;
+    height: 50vh;
+    margin-top: 2rem;
     overflow: hidden;
     overflow-y: scroll;
     align-items: flex-start;
   }
 
   .imagesContainer {
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
+    min-height: 100vh;
   }
 
   .imageContainer {
-    height: 50vh;
+    height: 30vh;
     width: auto;
   }
 }
